:art:  [BE]refactor: 체이닝 메서드 구조 변경